# src/main/java/com/lippio/shortest_path/controller/CountryController.java
@@ -8,6 +8,7 @@ import com.lippio.shortest_path.pojo.Country;
 import com.lippio.shortest_path.service.CountryService;
 import com.lippio.shortest_path.service.ShortestPathService;
 import lombok.AllArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -17,6 +18,7 @@ import java.util.Map;
 
 @RestController
 @AllArgsConstructor
+@Slf4j
 public class CountryController implements CountryApi {
 
     private final ShortestPathService shortestPathService;
@@ -26,6 +28,9 @@ public class CountryController implements CountryApi {
     public ResponseEntity<CountryDetailsDTO> countryDetails(final Map<String, String> headers,
                                                             final String countryCode,
                                                             final CountryIdentifierTypeDTO countryIdentifierType) {
+        log.info("Received GET country details with countryCode: {}, countryIdentifierType: {}",
+            countryCode,
+            countryIdentifierType);
         final Country country = countryService.getCountry(
             countryCode,
             CountryRoutingMapper.INSTANCE.toCountryIdentifierType(countryIdentifierType));
@@ -37,6 +42,10 @@ public class CountryController implements CountryApi {
                                                        final String origin,
                                                        final String destination,
                                                        final CountryIdentifierTypeDTO countryIdentifierType) {
+        log.info("Received GET calculate path with origin: {}, destination: {}, countryIdentifierType: {}",
+            origin,
+            destination,
+            countryIdentifierType);
         final List<String> shortestPath = shortestPathService.getShortestPath(
             origin,
             destination,
